add carousel for gallery images

--- a/index.html
+++ b/index.html
@@ -149,14 +149,32 @@
                     <a href="https://www.youtube.com/watch?v=4m6O2EXk2hE" class="lyt-playbtn" title="Play Video">
                     </a>
                 </lite-youtube>
-                <div class="image-placeholder" aria-label="Группа танцующих людей" role="img">
-                    <img src="img/group-dancing.webp" alt="Группа танцующих людей" loading="lazy" class="lazy-load">
-                </div>
-                <div class="image-placeholder" aria-label="Танцующая пара" role="img">
-                    <img src="img/couple-dancing.webp" alt="Танцующая пара" loading="lazy" class="lazy-load">
-                </div>
-                <div class="image-placeholder" aria-label="Танцующий мужчина" role="img">
-                    <img src="img/man-dancing.webp" alt="Танцующий мужчина" loading="lazy" class="lazy-load">
+                <div class="carousel">
+                    <div class="carousel-container">
+                        <div class="carousel-slide">
+                            <div class="image-placeholder" aria-label="Группа танцующих людей" role="img">
+                                <img src="img/group-dancing.webp" alt="Группа танцующих людей" loading="lazy"
+                                    class="lazy-load">
+                            </div>
+                        </div>
+                        <div class="carousel-slide">
+                            <div class="image-placeholder" aria-label="Танцующая пара" role="img">
+                                <img src="img/couple-dancing.webp" alt="Танцующая пара" loading="lazy"
+                                    class="lazy-load">
+                            </div>
+                        </div>
+                        <div class="carousel-slide">
+                            <div class="image-placeholder" aria-label="Танцующий мужчина" role="img">
+                                <img src="img/man-dancing.webp" alt="Танцующий мужчина" loading="lazy"
+                                    class="lazy-load">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-navigation">
+                        <button class="carousel-button prev" aria-label="Previous">←</button>
+                        <button class="carousel-button next" aria-label="Next">→</button>
+                    </div>
+                    <div class="carousel-dots"></div>
                 </div>
             </div>
         </section>
