fix arrows on carousel

--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
                         </div>
                     </div>
                     <div class="carousel-navigation">
-                        <button class="carousel-button prev" aria-label="Previous">←</button>
-                        <button class="carousel-button next" aria-label="Next">→</button>
+                        <button class="carousel-button prev" aria-label="Previous">&larr;</button>
+                        <button class="carousel-button next" aria-label="Next">&rarr;</button>
                     </div>
                     <div class="carousel-dots"></div>
                 </div>
