fix proper carousel displaying

--- a/index.html
+++ b/index.html
@@ -204,8 +204,12 @@
                         </div>
                     </div>
                     <div class="carousel-navigation">
-                        <button class="carousel-button prev" aria-label="Previous">&larr;</button>
-                        <button class="carousel-button next" aria-label="Next">&rarr;</button>
+                        <button class="carousel-button prev" aria-label="Previous">
+                            <img src="img/carousel-prev.svg" alt="Previous" class="nav-arrow">
+                        </button>
+                        <button class="carousel-button next" aria-label="Next">
+                            <img src="img/carousel-next.svg" alt="Next" class="nav-arrow">
+                        </button>
                     </div>
                     <div class="carousel-dots"></div>
                 </div>
@@ -430,7 +434,7 @@
                             <div class="class-entry">
                                 <span class="time">20:00</span>
                                 <span class="class-name"><strong>бачата соло</strong><br><em>(I и II
-                                        уровень)</em></span>
+                                        уровень)</ем></span>
                             </div>
                         </div>
                     </div>
@@ -442,7 +446,7 @@
                             <div class="class-entry">
                                 <span class="time">18:00</span>
                                 <span class="class-name"><strong>бачата соло</strong><br><em>(I и II
-                                        уровень)</em></span>
+                                        уровень)</ем></span>
                             </div>
                             <div class="class-entry">
                                 <span class="time">19:00</span>
@@ -450,7 +454,7 @@
                             </div>
                             <div class="class-entry">
                                 <span class="time">20:00</span>
-                                <span class="class-name"><strong>латино микс</strong><br><em>(универсальный)</em></span>
+                                <span class="class-name"><strong>латино микс</strong><br><em>(универсальный)</ем></span>
                             </div>
                         </div>
                         <div class="location-group">
@@ -458,15 +462,15 @@
                             <span class="teacher-name">Анжель</span>
                             <div class="class-entry">
                                 <span class="time">18:00</span>
-                                <span class="class-name"><strong>бачата соло</strong><br><em>(начинающий)</em></span>
+                                <span class="class-name"><strong>бачата соло</strong><br><em>(начинающий)</ем></span>
                             </div>
                             <div class="class-entry">
                                 <span class="time">19:00</span>
-                                <span class="class-name"><strong>латино микс</strong><br><em>(универсальный)</em></span>
+                                <span class="class-name"><strong>латино микс</strong><br><em>(универсальный)</ем></span>
                             </div>
                             <div class="class-entry">
                                 <span class="time">20:00</span>
-                                <span class="class-name"><strong>кизомба</strong><br><em>(начинающий)</em></span>
+                                <span class="class-name"><strong>кизомба</strong><br><em>(начинающий)</ем></span>
                             </div>
                         </div>
                     </div>
@@ -478,15 +482,15 @@
                             <div class="class-entry">
                                 <span class="time">18:00</span>
                                 <span class="class-name"><strong>бачата соло</strong><br><em>(начинающие и I
-                                        уровень)</em></span>
+                                        уровень)</ем></span>
                             </div>
                             <div class="class-entry">
                                 <span class="time">19:00</span>
-                                <span class="class-name"><strong>сальса Куба</strong><br><em>(продвинутый)</em></span>
+                                <span class="class-name"><strong>сальса Куба</strong><br><em>(продвинутый)</ем></span>
                             </div>
                             <div class="class-entry">
                                 <span class="time">20:00</span>
-                                <span class="class-name"><strong>сальса Куба</strong><br><em>(начинающий)</em></span>
+                                <span class="class-name"><strong>сальса Куба</strong><br><em>(начинающий)</ем></span>
                             </div>
                         </div>
                     </div>
@@ -497,12 +501,12 @@
                             <span class="teacher-name">Грейсьер</span>
                             <div class="class-entry">
                                 <span class="time">11:00</span>
-                                <span class="class-name"><strong>латино микс</strong><br><em>(универсальный)</em></span>
+                                <span class="class-name"><strong>латино микс</strong><br><em>(универсальный)</ем></span>
                             </div>
                             <div class="class-entry">
                                 <span class="time">12:00</span>
                                 <span class="class-name"><strong>бачата соло</strong><br><em>(I и II
-                                        уровень)</em></span>
+                                        уровень)</ем></span>
                             </div>
                         </div>
                     </div>
@@ -517,40 +521,40 @@
             <ul class="qa-container">
                 <li>
                     <h3>Как начать новичку?</h3>
-                    <p>Выбирайте группы с нуля или для начинающих, в них не требуют специальной подготовки. Главное -
+                    <п>Выбирайте группы с нуля или для начинающих, в них не требуют специальной подготовки. Главное -
                         это
-                        желание научиться танцевать. </p>
-                </li>
-                <li>
-                    <h3>В группы парных занятий нужно приходить с парой?</h3>
-                    <p>Да,<br>нужно приходить с парой или записаться в лист ожидания пары.</p>
-                </li>
-                <li>
-                    <h3>В чем тренироваться?</h3>
-                    <p>В удобной, не стесняющей движения одежде и танцевальных туфлях или кроссовках. На латино микс
-                        рекомендуем одевать леггинсы и кроссовки.</p>
-                </li>
-                <li>
-                    <h3>Как произвести платеж с помощью системы ERIP?</h3>
-                    <p>Для оплаты через систему ERIP, пожалуйста, следуйте этим шагам:</p>
-                    <p>
-                        оплата > ЕРИП > Сервис E-POS > оплата тов.и услуг >
-                        лицевой счет: <strong>28795-1-25</strong> (сумму можно менять)
-                    </p>
-                </li>
-            </ul>
-            <div class="spacer"></div>
+                        желание научиться танцевать. </п>
+                    </ли>
+                    <ли>
+                        <h3>В группы парных занятий нужно приходить с парой?</h3>
+                        <п>Да,<br>нужно приходить с парой или записаться в лист ожидания пары.</п>
+                    </ли>
+                    <ли>
+                        <h3>В чем тренироваться?</h3>
+                        <п>В удобной, не стесняющей движения одежде и танцевальных туфлях или кроссовках. На латино микс
+                            рекомендуем одевать леггинсы и кроссовки.</п>
+                    </ли>
+                    <ли>
+                        <h3>Как произвести платеж с помощью системы ERIP?</h3>
+                        <п>Для оплаты через систему ERIP, пожалуйста, следуйте этим шагам:</п>
+                        <п>
+                            оплата > ЕРИП > Сервис E-POS > оплата тов.и услуг >
+                            лицевой счет: <strong>28795-1-25</strong> (сумму можно менять)
+                        </п>
+                    </ли>
+                    </ул>
+                    <div class="spacer"></div>
         </section>
 
         <section id="contacts" class="container-full" aria-labelledby="contacts-heading">
             <h2>Контакты</h2>
             <div class="spacer"></div>
             <div class="contacts-container">
-                <p class="bigger-text">Не стесняйтесь писать, звонить и посещать нас. <br>
-                    Мы действительно любим общаться с нашими клиентами.</p>
-                <p>
+                <п class="bigger-text">Не стесняйтесь писать, звонить и посещать нас. <br>
+                    Мы действительно любим общаться с нашими клиентами.</п>
+                <п>
                     <strong>Email:</strong> <a href="mailto:lacasadegrei@mail.ru">lacasadegrei@mail.ru</a>
-                </p>
+                </п>
                 <div class="social-media">
                     <a href="https://www.facebook.com/LaCasaDeGrei?locale=ru_RU" target="_blank" rel="noopener"><img
                             src="img/facebook.svg" alt="Facebook" loading="lazy"></a>
@@ -562,11 +566,11 @@
                             src="img/youtube.svg" alt="Youtube" loading="lazy"></a>
                 </div>
                 <h3>Три зала в Минске:</h3>
-                <ol class="contact-saloon">
-                    <li>ул. Матусевича, 35г (спортивный центр Sport Goat)</li>
-                    <li>ул. Тимирязева, 9/10 (танцевальное пространство Эллада)</li>
-                    <li>пр-т Рокоссовского, 44/2 (теннисный центр "Аква Минск")</li>
-                </ol>
+                <ол class="contact-saloon">
+                    <ли>ул. Матусевича, 35г (спортивный центр Sport Goat)</ли>
+                    <ли>ул. Тимирязева, 9/10 (танцевальное пространство Эллада)</ли>
+                    <ли>пр-т Рокоссовского, 44/2 (теннисный центр "Аква Минск")</ли>
+                </ол>
                 <div class="contact-locations">
                     <div class="image-placeholder" aria-label="Расположение танцевальных студий">
                         <img src="img/map.webp" alt="Расположение танцевальных студий" usemap="#map-directions"
@@ -584,7 +588,7 @@
                                 coords="1113,689,1385,797" shape="rect" data-original-coords="1113,689,1385,797">
                         </map>
                     </div>
-                    <p><em>(Нажмите на местоположение на карте, чтобы проложить туда маршрут)</em></p>
+                    <п><em>(Нажмите на местоположение на карте, чтобы проложить туда маршрут)</em></п>
                 </div>
             </div>
             <div class="spacer"></div>
@@ -594,25 +598,25 @@
     <footer>
         <div class="container-full">
             <div class="copyright">
-                <p>© 2025 La Casa de Grei. Все права защищены.</p>
-                <p><em>Создание и продвижение сайта <a href="mailto:ernvk23@gmail.com" target="_blank"
+                <п>© 2025 La Casa de Grei. Все права защищены.</п>
+                <п><em>Создание и продвижение сайта <a href="mailto:ernvk23@gmail.com" target="_blank"
                             rel="noopener">Edgar
-                            R.N</a></em></p>
+                            R.N</a></em></п>
                 <img src="img/logo-content.svg" alt="La Casa de Grei логотип" id="logo-footer">
             </div>
             <div class="legal">
-                <p>Индивидуальный предприниматель Коваленко Максим Леонидович</p>
-                <p>УНП: 193553191</p>
-                <p>Свидетельство о государственной регистрации от 28.05.2021, Республика Беларусь</p>
-                <p><strong>Реквизиты для оплаты:</strong></p>
-                <ul>
-                    <li>
+                <п>Индивидуальный предприниматель Коваленко Максим Леонидович</п>
+                <п>УНП: 193553191</п>
+                <п>Свидетельство о государственной регистрации от 28.05.2021, Республика Беларусь</п>
+                <п><strong>Реквизиты для оплаты:</strong></п>
+                <ул>
+                    <ли>
                         ERIP (E-POS), лицевой счет: 28795-1-25
-                    </li>
-                    <li>
+                    </ли>
+                    <ли>
                         Расчетный счет: BY97ALFA30132A17830030270000 в BYN ЗАО «Альфа-Банк»<br>БИК: ALFABY2X
-                    </li>
-                </ul>
+                    </ли>
+                </ул>
             </div>
         </div>
     </footer>
