add dhub pictures to carousel

--- a/index.html
+++ b/index.html
@@ -202,6 +202,41 @@
                                     class="lazy-load">
                             </div>
                         </div>
+                        <div class="carousel-slide">
+                            <div class="image-placeholder" aria-label="Танцующий мужчина" role="img">
+                                <img src="img/dhub1.webp" alt="Танцующий мужчина" loading="lazy" class="lazy-load">
+                            </div>
+                        </div>
+                        <div class="carousel-slide">
+                            <div class="image-placeholder" aria-label="Танцующий мужчина" role="img">
+                                <img src="img/dhub2.webp" alt="Танцующий мужчина" loading="lazy" class="lazy-load">
+                            </div>
+                        </div>
+                        <div class="carousel-slide">
+                            <div class="image-placeholder" aria-label="Танцующий мужчина" role="img">
+                                <img src="img/dhub3.webp" alt="Танцующий мужчина" loading="lazy" class="lazy-load">
+                            </div>
+                        </div>
+                        <div class="carousel-slide">
+                            <div class="image-placeholder" aria-label="Танцующий мужчина" role="img">
+                                <img src="img/dhub4.webp" alt="Танцующий мужчина" loading="lazy" class="lazy-load">
+                            </div>
+                        </div>
+                        <div class="carousel-slide">
+                            <div class="image-placeholder" aria-label="Танцующий мужчина" role="img">
+                                <img src="img/dhub5.webp" alt="Танцующий мужчина" loading="lazy" class="lazy-load">
+                            </div>
+                        </div>
+                        <div class="carousel-slide">
+                            <div class="image-placeholder" aria-label="Танцующий мужчина" role="img">
+                                <img src="img/dhub6.webp" alt="Танцующий мужчина" loading="lazy" class="lazy-load">
+                            </div>
+                        </div>
+                        <div class="carousel-slide">
+                            <div class="image-placeholder" aria-label="Танцующий мужчина" role="img">
+                                <img src="img/dhub7.webp" alt="Танцующий мужчина" loading="lazy" class="lazy-load">
+                            </div>
+                        </div>
                     </div>
                     <div class="carousel-navigation">
                         <button class="carousel-button prev" aria-label="Previous">
