change alt labels for carousel pics

--- a/index.html
+++ b/index.html
@@ -203,38 +203,38 @@
                             </div>
                         </div>
                         <div class="carousel-slide">
-                            <div class="image-placeholder" aria-label="Танцующий мужчина" role="img">
-                                <img src="img/dhub1.webp" alt="Танцующий мужчина" loading="lazy" class="lazy-load">
+                            <div class="image-placeholder" aria-label="Люди танцуют" role="img">
+                                <img src="img/dhub1.webp" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
-                            <div class="image-placeholder" aria-label="Танцующий мужчина" role="img">
-                                <img src="img/dhub2.webp" alt="Танцующий мужчина" loading="lazy" class="lazy-load">
+                            <div class="image-placeholder" aria-label="Люди танцуют" role="img">
+                                <img src="img/dhub2.webp" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
-                            <div class="image-placeholder" aria-label="Танцующий мужчина" role="img">
-                                <img src="img/dhub3.webp" alt="Танцующий мужчина" loading="lazy" class="lazy-load">
+                            <div class="image-placeholder" aria-label="Люди танцуют" role="img">
+                                <img src="img/dhub3.webp" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
-                            <div class="image-placeholder" aria-label="Танцующий мужчина" role="img">
-                                <img src="img/dhub4.webp" alt="Танцующий мужчина" loading="lazy" class="lazy-load">
+                            <div class="image-placeholder" aria-label="Люди танцуют" role="img">
+                                <img src="img/dhub4.webp" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
-                            <div class="image-placeholder" aria-label="Танцующий мужчина" role="img">
-                                <img src="img/dhub5.webp" alt="Танцующий мужчина" loading="lazy" class="lazy-load">
+                            <div class="image-placeholder" aria-label="Люди танцуют" role="img">
+                                <img src="img/dhub5.webp" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
-                            <div class="image-placeholder" aria-label="Танцующий мужчина" role="img">
-                                <img src="img/dhub6.webp" alt="Танцующий мужчина" loading="lazy" class="lazy-load">
+                            <div class="image-placeholder" aria-label="Люди танцуют" role="img">
+                                <img src="img/dhub6.webp" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
-                            <div class="image-placeholder" aria-label="Танцующий мужчина" role="img">
-                                <img src="img/dhub7.webp" alt="Танцующий мужчина" loading="lazy" class="lazy-load">
+                            <div class="image-placeholder" aria-label="Люди танцуют" role="img">
+                                <img src="img/dhub7.webp" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                     </div>
