--- a/index.html
+++ b/index.html
@@ -196,12 +196,12 @@
                                     class="lazy-load">
                             </div>
                         </div>
-                        <div class="carousel-slide">
+                        <!-- <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Танцующий мужчина" role="img">
                                 <img src="img/man-dancing.webp" alt="Танцующий мужчина" loading="lazy"
                                     class="lazy-load">
                             </div>
-                        </div>
+                        </div> -->
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
                                 <img src="img/dhub1.webp" alt="Люди танцуют" loading="lazy" class="lazy-load">
