add new hero pictures

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <!-- Preloads -->
     <link rel="preload" href="img/logo-content.svg" as="image">
-    <link rel="preload" href="img/home-mobile.webp" as="image" media="(max-width: 768px)">
-    <link rel="preload" href="img/home-desktop.webp" as="image" media="(min-width: 769px)">
+    <link rel="preload" href="img/home-mobile-placeholder.webp" as="image" media="(max-width: 768px)">
+    <link rel="preload" href="img/home-desktop-placeholder.webp" as="image" media="(min-width: 769px)">
     <link rel="preload" href="img/scroll-down.svg" as="image">
     <!-- Stylesheets -->
     <link rel="stylesheet" href="styles.css">
@@ -68,8 +68,8 @@
             </div>
         </button>
 
-        <section id="home" class="container-full" aria-labelledby="home-heading" data-bg-desktop="img/home-desktop.webp"
-            data-bg-mobile="img/home-mobile.webp">
+        <section id="home" class="container-full" aria-labelledby="home-heading"
+            data-bg-desktop="img/home-desktop-full.webp" data-bg-mobile="img/home-mobile-full.webp">
             <div class="home-container">
                 <h1>LA CASA<br>DE GREI</h1>
                 <p>Школа латиноамериканских танцев</p>
