use JS parallax with progressive loading

--- a/index.html
+++ b/index.html
@@ -68,8 +68,13 @@
             </div>
         </button>
 
-        <section id="home" class="container-full" aria-labelledby="home-heading"
-            data-bg-desktop="img/home-desktop-full.webp" data-bg-mobile="img/home-mobile-full.webp">
+        <section id="home" class="container-full" aria-labelledby="home-heading">
+            <div class="parallax-container">
+                <img class="parallax-img" alt="Background" data-src-mobile="img/home-mobile-full.webp"
+                    data-src-desktop="img/home-desktop-full.webp"
+                    data-placeholder-mobile="img/home-mobile-placeholder.webp"
+                    data-placeholder-desktop="img/home-desktop-placeholder.webp">
+            </div>
             <div class="home-container">
                 <h1>LA CASA<br>DE GREI</h1>
                 <p>Школа латиноамериканских танцев</p>
@@ -153,7 +158,7 @@
                     </div>
                     <div class="teacher-info-2">
                         <h3>Аньель Эррера Кастильо</h3>
-                        <p>Образование: Национальная школа исскусств в Гаване по специальности: "Танцор современного
+                        <p>Образование: Национальная школа исскусств p Гаване по специальности: "Танцор современного
                             и
                             народного танца".</p>
                     </div>
