--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Casa de Grei - Кубинская школа латиноамериканских танцев в Минске</title>
 
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+
     <!-- Favicon -->
     <link rel="icon" href="/favicon.ico" sizes="any" type="image/x-icon" />
     <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml" />
