add v2 to flush cache

--- a/index.html
+++ b/index.html
@@ -6,24 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Casa de Grei - Кубинская школа латиноамериканских танцев в Минске</title>
 
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <!-- <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
-    <meta http-equiv="Expires" content="0">
+    <meta http-equiv="Expires" content="0"> -->
 
     <!-- Favicon -->
     <link rel="icon" href="/favicon.ico" sizes="any" type="image/x-icon" />
     <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml" />
 
     <!-- Preloads -->
-    <link rel="preload" href="img/logo-content.svg" as="image">
-    <link rel="preload" href="img/home-mobile-placeholder.webp" as="image" media="(max-width: 768px)">
-    <link rel="preload" href="img/home-desktop-placeholder.webp" as="image" media="(min-width: 769px)">
-    <link rel="preload" href="img/scroll-down.svg" as="image">
+    <link rel="preload" href="img/logo-content.svg?v=2" as="image">
+    <link rel="preload" href="img/home-mobile-placeholder.webp?v=2" as="image" media="(max-width: 768px)">
+    <link rel="preload" href="img/home-desktop-placeholder.webp?v=2" as="image" media="(min-width: 769px)">
+    <link rel="preload" href="img/scroll-down.svg?v=2" as="image">
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css?v=2">
     <link rel="stylesheet" href="src/lite-yt-embed.css">
     <!-- Scripts -->
-    <script src="script.js" defer></script>
+    <script src="script.js?v=2" defer></script>
     <script src="src/lite-yt-embed.js" defer></script>
     <meta name="description"
         content="Кубинская школа латиноамериканских танцев La Casa de Grei в Минске. Обучаем сальсе, бачате, кизомбе и латино микс с кубинскими преподавателями. Первое занятие бесплатно! Почувствуйте ритм Кубы вместе с нами.">
@@ -119,7 +119,7 @@
                 <a href="#styles" id="cta">Посмотреть стили</a>
             </div>
             <div class="scroll-down">
-                <img src="img/scroll-down.svg" alt="Прокрутить вниз">
+                <img src="img/scroll-down.svg?v=2" alt="Прокрутить вниз">
                 <p>Прокрутите<br>вниз</p>
             </div>
         </section>
@@ -140,7 +140,7 @@
             <div class="teachers-container">
                 <article class="teacher">
                     <div class="image-placeholder" aria-label="Инструктор по танцам Грейсьер" role="img">
-                        <img src="img/male-teacher.webp" alt="Инструктор по танцам Грейсьер" loading="lazy"
+                        <img src="img/male-teacher.webp?v=2" alt="Инструктор по танцам Грейсьер" loading="lazy"
                             class="lazy-load">
                     </div>
                     <div class="teacher-info-1">
@@ -157,7 +157,7 @@
                 </article>
                 <article class="teacher">
                     <div class="image-placeholder" aria-label="Инструктор по танцам Аньель" role="img">
-                        <img src="img/female-teacher.webp" alt="Инструктор по танцам Аньель" loading="lazy"
+                        <img src="img/female-teacher.webp?v=2" alt="Инструктор по танцам Аньель" loading="lazy"
                             class="lazy-load">
                     </div>
                     <div class="teacher-info-2">
@@ -213,37 +213,37 @@
                         </div> -->
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub1.webp" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub1.webp?v=2" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub2.webp" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub2.webp?v=2" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub3.webp" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub3.webp?v=2" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub4.webp" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub4.webp?v=2" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub5.webp" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub5.webp?v=2" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub6.webp" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub6.webp?v=2" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub7.webp" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub7.webp?v=2" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                     </div>
