--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="styles.css?v=2">
     <link rel="stylesheet" href="src/lite-yt-embed.css">
     <!-- Scripts -->
-    <script src="script.js?v=2" defer></script>
+    <script src="script.js" defer></script>
     <script src="src/lite-yt-embed.js" defer></script>
     <meta name="description"
         content="Кубинская школа латиноамериканских танцев La Casa de Grei в Минске. Обучаем сальсе, бачате, кизомбе и латино микс с кубинскими преподавателями. Первое занятие бесплатно! Почувствуйте ритм Кубы вместе с нами.">
