add gradient to h1

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml" />
 
     <!-- Preloads -->
-    <link rel="preload" href="img/logo-content.svg?v=2" as="image">
-    <link rel="preload" href="img/home-mobile-placeholder.webp?v=2" as="image" media="(max-width: 768px)">
-    <link rel="preload" href="img/home-desktop-placeholder.webp?v=2" as="image" media="(min-width: 769px)">
+    <link rel="preload" href="img/logo-content.svg" as="image">
+    <link rel="preload" href="img/home-mobile-placeholder.webp" as="image" media="(max-width: 768px)">
+    <link rel="preload" href="img/home-desktop-placeholder.webp" as="image" media="(min-width: 769px)">
     <link rel="preload" href="img/scroll-down.svg?v=2" as="image">
     <!-- Stylesheets -->
     <link rel="stylesheet" href="styles.css?v=2">
